--- a/temperature/test.html
+++ b/temperature/test.html
@@ -1,7 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <script src="script.js"></script>
+    <meta charset="UTF-8">
   </head>
   <body>
+    <script src="script.js"></script>
   </body>
 </html>
