--- a/resume_template/index.html
+++ b/resume_template/index.html
@@ -2,20 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300">
+    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://unpkg.com/vue"></script>
+    <title></title>
   </head>
   <body>   
     <div id="app-container">
-      <header>
-        <div class="navbar"></div>
+      <header id="header">
+        <navbar></navbar>
       </header>
-      <main>
-        <div class="content"></div>
+      <main id="main">
+        <div class="content">
+          <placeholder></placeholder>
+        <div class="lower"><div class="upper"></div></div><div class="lower"><div class="upper"></div></div><div class="lower"><div class="upper"></div></div>
+        </div>
       </main>
-      <footer>
-        <div class="footer"></div>
+      <footer id="footer">
+        <footerbar></footerbar>
       </footer>
     </div>
     <script src="script.js"></script>
